// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useStyles attaches new styles when a new style collector is supplied 1`] = `
<head>
  <style
    data-trousers=".foo__3889083325 .foo--491189580"
    type="text/css"
  >
    
    .foo__3889083325{background-color:blue;}

    .foo--491189580{background-color:red;}

  </style>
</head>
`;

exports[`useStyles attaches new styles when a new style collector is supplied 2`] = `
<head>
  <style
    data-trousers=".foo__3889083325 .foo--491189580 .foo__3016956831 .foo--3826246206"
    type="text/css"
  >
    
    .foo__3889083325{background-color:blue;}

    .foo--491189580{background-color:red;}

    .foo__3016956831{background-color:purple;}

    .foo--3826246206{background-color:green;}

  </style>
</head>
`;

exports[`useStyles attaches object style to the head 1`] = `
<head>
  <style
    data-trousers=".css__2304954679"
    type="text/css"
  >
    
    .css__2304954679{background-color:blue;}

  </style>
</head>
`;

exports[`useStyles attaches object style with keyframe animations to the head 1`] = `
<head>
  <style
    data-trousers=".css__4070925666"
    type="text/css"
  >
    
    .css__4070925666{background-color:blue;}@-webkit-keyframes rotating-css__4070925666{from{-webkit-transform:rotate(0deg);-ms-transform:rotate(0deg);transform:rotate(0deg);}to{-webkit-transform:rotate(360deg);-ms-transform:rotate(360deg);transform:rotate(360deg);}}@keyframes rotating-css__4070925666{from{-webkit-transform:rotate(0deg);-ms-transform:rotate(0deg);transform:rotate(0deg);}to{-webkit-transform:rotate(360deg);-ms-transform:rotate(360deg);transform:rotate(360deg);}}

  </style>
</head>
`;

exports[`useStyles attaches object style with media queries to the head 1`] = `
<head>
  <style
    data-trousers=".css__278897963"
    type="text/css"
  >
    
    .css__278897963{background-color:blue;}@media (min-width:768px){.css__278897963{background-color:#deecff;}}

  </style>
</head>
`;

exports[`useStyles attaches object style with pseudo states to the head 1`] = `
<head>
  <style
    data-trousers=".css__3748122140"
    type="text/css"
  >
    
    .css__3748122140{background-color:blue;}.css__3748122140:hover{background-color:brown;}

  </style>
</head>
`;

exports[`useStyles attaches single style to the head 1`] = `
<head>
  <style
    data-trousers=".css__293439549"
    type="text/css"
  >
    
    .css__293439549{background-color:blue;}

  </style>
</head>
`;

exports[`useStyles attaches styles to the head 1`] = `
<head>
  <style
    data-trousers=".foo__3889083325"
    type="text/css"
  >
    
    .foo__3889083325{background-color:blue;}

  </style>
</head>
`;

exports[`useStyles attaches styles with modifiers to the head 1`] = `
<head>
  <style
    data-trousers=".foo__3889083325"
    type="text/css"
  >
    
    .foo__3889083325{background-color:blue;}

  </style>
</head>
`;

exports[`useStyles attaches styles with modifiers to the head 2`] = `
<head>
  <style
    data-trousers=".foo__3889083325 .foo--491189580"
    type="text/css"
  >
    
    .foo__3889083325{background-color:blue;}

    .foo--491189580{background-color:red;}

  </style>
</head>
`;

exports[`useStyles attaches styles with multiple named modifiers to the head 1`] = `
<head>
  <style
    data-trousers=".foo__3889083325"
    type="text/css"
  >
    
    .foo__3889083325{background-color:blue;}

  </style>
</head>
`;

exports[`useStyles attaches styles with multiple named modifiers to the head 2`] = `
<head>
  <style
    data-trousers=".foo__3889083325 .foo--primary491189580"
    type="text/css"
  >
    
    .foo__3889083325{background-color:blue;}

    .foo--primary491189580{background-color:red;}

  </style>
</head>
`;

exports[`useStyles attaches styles with multiple named modifiers to the head 3`] = `
<head>
  <style
    data-trousers=".foo__3889083325 .foo--primary491189580 .foo--secondary112991879"
    type="text/css"
  >
    
    .foo__3889083325{background-color:blue;}

    .foo--primary491189580{background-color:red;}

    .foo--secondary112991879{background-color:isBlue;}

  </style>
</head>
`;

exports[`useStyles attaches styles with multiple named modifiers to the head 4`] = `
<head>
  <style
    data-trousers=".foo__3889083325 .foo--primary491189580 .foo--secondary112991879"
    type="text/css"
  >
    
    .foo__3889083325{background-color:blue;}

    .foo--primary491189580{background-color:red;}

    .foo--secondary112991879{background-color:isBlue;}

  </style>
</head>
`;

exports[`useStyles attaches styles with named modifiers to the head 1`] = `
<head>
  <style
    data-trousers=".foo__3889083325"
    type="text/css"
  >
    
    .foo__3889083325{background-color:blue;}

  </style>
</head>
`;

exports[`useStyles attaches styles with named modifiers to the head 2`] = `
<head>
  <style
    data-trousers=".foo__3889083325 .foo--primary491189580"
    type="text/css"
  >
    
    .foo__3889083325{background-color:blue;}

    .foo--primary491189580{background-color:red;}

  </style>
</head>
`;

exports[`useStyles attaches themed single style to the head 1`] = `
<head>
  <style
    data-trousers=".css__12650447753516409327"
    type="text/css"
  >
    
    .css__12650447753516409327{background-color:Atomic Tangerine;}

  </style>
</head>
`;

exports[`useStyles attaches themed styles to the head 1`] = `
<head>
  <style
    data-trousers=".foo__12257674633106931827"
    type="text/css"
  >
    
    .foo__12257674633106931827{background-color:purple;}

  </style>
</head>
`;

exports[`useStyles attaches themed styles to the head 2`] = `
<head>
  <style
    data-trousers=".foo__12257674633106931827 .foo--12257674633106931827"
    type="text/css"
  >
    
    .foo__12257674633106931827{background-color:purple;}

    .foo--12257674633106931827{background-color:purple;}

  </style>
</head>
`;
